# UGAS

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.old.txt  CMakeLists.txt  Dockerfile  README.md  UGAS.cpp  UGAS.h  UGAS.vcxproj  UGAS.vcxproj.filters  UGASConfig.cmake.in  UGAS_Headers.h  docker-compose.yml  main.cpp  makeUGAS.bat  package.xml  runUGAS.bat
Parameters/: DebugSettings.h  Parameters.cpp
UGAS/: CMakeLists.txt  ProjectTest.cpp  README.md  UGAS.cpp  UGAS.h  UGAS.sln  UGAS.vcxproj  UGAS.vcxproj.filters  UGAS_Headers.h  main.cpp
UGAS/Parameters/: DebugSettings.h  Parameters.cpp  Parameters.h  UsingModules.h
UGAS/lib/ArmorFinder/: ArmorIdentifier.h
UGAS/lib/ArmorFinder/Implementations/: ArmorIdentifier_V1.cpp  ArmorIdentifier_V1.h  ArmorIdentifier_V2.cpp  ArmorIdentifier_V2.h
UGAS/lib/ArmorFinder/Implementations/FastStruct/: FastStruct.h
UGAS/lib/ArmorFinder/Implementations/FastStruct/Implementations/: FastArray2d.h  FastBucketMap.h  FastDisjointSet.h  FastStack.h
UGAS/lib/ArmorFinder/NumberIdentifier/: NumberIdentifier.h
UGAS/lib/ArmorFinder/NumberIdentifier/Implementations/: NullNumberIdentifier.h  NumberIdentifier_V1.cpp  NumberIdentifier_V1.h  model.pb
UGAS/lib/Common/: Color.h  UniversalStruct.h
UGAS/lib/Common/DebugTools/: DebugHeader.h
UGAS/lib/Common/DebugTools/Implementations/: CustomException.h  Easylogging++.cc  ExceptionHandling.h  InfoImg.h  Log.cpp  Log.h  ValueGragh.cpp  ValueGragh.h
UGAS/lib/Common/DebugTools/Implementations/MatForm/: ButtonControl.hpp  MatControl.hpp  MatForm.hpp  RectangleControl.hpp
UGAS/lib/Common/FPSCounter/: FPSCounter.cpp  FPSCounter.h
UGAS/lib/Common/Filter/: Filter.h
UGAS/lib/Common/PnP/: PnP.cpp  PnP.h
UGAS/lib/Common/Robot/: Robot.cpp  Robot.h
UGAS/lib/Common/TimeStamp/: TimeStampCounter.h
UGAS/lib/Common/UniversalFunctions/: UniversalFunctions.cpp  UniversalFunctions.h
UGAS/lib/GimbalSerial/: GimbalSerial.h  GimbalSerialHandle.cpp  GimbalSerialHandle.h  Packages.h
UGAS/lib/GimbalSerial/CRC/: CRC.h
UGAS/lib/GimbalSerial/Implementations/Linux/: LinuxGimbalSerial.cpp  LinuxGimbalSerial.h  LinuxSerial.cpp  LinuxSerial.h
UGAS/lib/GimbalSerial/Implementations/Windows/: WindowsGimbalSerial.cpp  WindowsGimbalSerial.h  WindowsSerial.cpp  WindowsSerial.h
UGAS/lib/ImgCapture/: ImgCapture.h
UGAS/lib/ImgCapture/Implementations/: CVCameraCapture.cpp  CVCameraCapture.h  CVImgCapture.cpp  CVImgCapture.h  CVVideoCapture.cpp  CVVideoCapture.h  CVVideoFrameCapture.h  HTCameraCapture.cpp  HTCameraCapture.h
UGAS/lib/ImgCapture/Implementations/Linux/: LinuxHTCameraCapture.cpp  LinuxHTCameraCapture.h
UGAS/lib/ImgCapture/Implementations/Windows/: WindowsHTCameraCapture.cpp  WindowsHTCameraCapture.h
UGAS/lib/ImgPretreat/: ImgPretreat.h
UGAS/lib/ImgPretreat/Implementations/: ImgPretreat_V1.cpp  ImgPretreat_V1.h  ImgPretreat_V2.cpp  ImgPretreat_V2.h
UGAS/lib/TargetSolution/: Target.h  TargetSolution.h
UGAS/lib/TargetSolution/Implementations/: TargetSolution_V1.cpp  TargetSolution_V1.h
UGAS/lib/TrackingStrategy/: TrackingStrategy.h
UGAS/lib/TrackingStrategy/Implementations/: TrackingStrategy_V1.h
UGAS/lib/Trajectory/: Trajectory.h
UGAS/lib/Trajectory/Implementations/: Trajectory_FEM.cpp  Trajectory_FEM.h
cmake/: FindHikCameraSDK.cmake  utils.cmake
discard/: UGAS.h
discard/Parameters/: DebugSettings.h  Parameters.h  UsingModules.h
discard/lib/ArmorFinder/: ArmorIdentifier.h
discard/lib/GimbalSerial/: Packages.h
discard/lib/ImgPretreat/: ImgPretreat.h
discard/lib/TargetSolution/: TargetSolution.h
discard/lib/Trajectory/: Trajectory.h
docs/: UGAS编译前准备.md
docs/Windows/: UGAS编译前准备.md  openCV.props
lib/ArmorFinder/: ArmorIdentifier.h
lib/ArmorFinder/Implementations/: ArmorIdentifier_V2.cpp  ArmorIdentifier_V2.h
lib/ArmorFinder/NumberIdentifier/: NumberIdentifier.h
lib/Common/: UniversalStruct.h
lib/Common/DebugTools/: DebugHeader.h
lib/Common/FPSCounter/: FPSCounter.cpp
lib/Common/Filter/: Filter.cpp
lib/Common/PnP/: PnP.h
lib/Common/Robot/: Robot.cpp
lib/Common/TimeStamp/: TimeStampCounter.cpp  TimeStampCounter.h
lib/GimbalSerial/: GimbalSerialHandle.h
lib/GimbalSerial/CRC/: CRC.h
lib/ImgCapture/: ImgCapture.h
lib/ImgCapture/Implementations/: CVVideoCapture.cpp  CVVideoCapture.h  CVVideoFrameCapture.cpp  HTCameraCapture.h
lib/ImgPretreat/: ImgPretreat.h
lib/ImgPretreat/Implementations/: ImgPretreat_V1.cpp  ImgPretreat_V2.cpp  ImgPretreat_V2.h
lib/TargetSolution/: TargetSolution.h
lib/TrackingStrategy/: TrackingStrategy.h
lib/Trajectory/: Trajectory.h
lib/Trajectory/Implementations/: Trajectory_FEM.cpp
models/: NumberIdentifyModelV2.pb  NumberIdentifyModelV3.pb  NumberIdentifyModelV4.pb  armoridentify_v3.onnx
rules/: IMU.rules  gimbal.rules
shell/: build.sh  deploy.sh  docker-init.sh  env_init.sh  install.sh  run.sh
src/: config.h.in  main.cpp
src/Control/: CMakeLists.txt
src/Control/Gimbal/: Gimbal.cpp  Gimbal.h  GimbalInfantry.cpp  GimbalInfantry.h  GimbalUav.cpp  GimbalUav.h
src/Control/Serial/: CBoardInfantry.h  CBoardInfantryAsync.h  CBoardSentry.h  CBoardUav.h  GYH1.h  HiPNUC.h  Serial.h  SerialCBoard.h  SerialDefines.h  StatusBoard.h  VirtualCBoard.h
src/Control/Serial/CRC/: CRC.cpp
src/Control/Serial/Impl/: Linux.h  Windows.h
src/Control/Serial/Windows/: WindowsSerial.h
src/Core/: CMakeLists.txt
src/Util/: CMakeLists.txt  Exceptions.h  Util.h  UtilFunctions.h
src/Util/Debug/: CustomException.h  DebugCanvas.cpp  DebugCanvas.h  DebugSettings.h  Log.cpp  Log.h  ValueGragh.h
src/Util/Debug/MatForm/: ButtonControl.hpp  MatControl.hpp  MatForm.cpp  MatForm.hpp  RectangleControl.hpp
src/Util/FPSCounter/: FPSCounter.cpp  FPSCounter.h
src/Util/Parameter/: Parameters.cpp  Parameters.h
src/Util/Parameter/Specialize/: BalancedInfantry.h  McknumWheelInfantry.h  TopFeedingOmniWheelInfantry.h  Uav.h
src/Util/ROS/: Node.h  TfBroadcast.h
src/Util/Recorder/: PNGRecorder.h
src/Util/Serial/: CRC.h  SerialUtil.h
src/Util/TimeStamp/: TimeStampCounter.cpp  TimeStampCounter.h
src/util/: fps_counter.h
(+118 files in other folders)
